# JsonConfiger

./: .gitignore  CMakeLists.txt
Source/: main.cpp
Source/Config/: ConfigManager.h  IConfig.h
Source/JsonConfiger/Archive/: JsonArchive.cpp  JsonArchive.h
Source/JsonConfiger/Config/: ConfigManager.cpp  ConfigManager.h  IConfig.cpp  IJsonConfig.cpp  IJsonConfig.h
Test/: CMakeLists.txt  GenerateVsProject.bat
Test/Source/: main.cpp
